--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ desafio-02.2/.vscode/
 desafio-02.3/.vscode/
 desafio-03.1/node_modules
 desafio-03.2/node_modules
+desafio-03.3/node_modules
+Foodfy/dev/back-end/node_modules
