--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ desafio-02.3/.vscode/
 desafio-03.1/node_modules
 desafio-03.2/node_modules
 desafio-03.3/node_modules
+desafio-04.1/node_modules
+desafio-04.1/.vscode/
 
