Desafio 4.3 -Avatar url: campo do tipo url para cadastrar o caminho da imagem do professor; -Nome completo: campo do tipo text; -Data de nascimento: campo do tipo date; -Grau de escolaridade: campo do tipo select (documentação do select) que deve conter as opções Ensino Médio Completo, Ensino Superior Completo, -Mestrado e Doutorado; -Tipo de aula: campo do tipo radio que deve conter as opções Presencial e À distância; -Área de atuação: campo do tipo text que deve conter as informações das matérias que o professor pode lecionar. Please enter the commit message for your changes. Lines starting

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ desafio-03.2/node_modules
 desafio-03.3/node_modules
 desafio-04.1/node_modules
 desafio-04.1/.vscode/
+desafio-04.3/.vscode/
+desafio-04.3/node_modules
 
