Desafio 4.4 Nessa etapa você deve criar duas rotas: uma para apresentar os dados do professor (show) e outra para a edição dos dados cadastrados (edit). Além disso, realize a formatação dos dados cadastrados para a correta exibição no HTML

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ desafio-04.1/node_modules
 desafio-04.1/.vscode/
 desafio-04.3/.vscode/
 desafio-04.3/node_modules
+desafio-04.4/.vscode/
+desafio-04.4/node_modules
 
