Desafio 4.5 -link dos requsitos: https://github.com/rocketseat-education/bootcamp-launchbase-desafios-03/blob/master/desafios/03-refatorando-foodfy.md'

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ desafio-04.3/.vscode/
 desafio-04.3/node_modules
 desafio-04.4/.vscode/
 desafio-04.4/node_modules
+desafio-04.5/.vscode/
+desafio-04.5/node_modules
 
