Desafio 4.6 - link dos requisitos https://github.com/rocketseat-education/bootcamp-launchbase-desafios-04/blob/master/desafios/04-6-list-teachers.md

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ desafio-04.4/.vscode/
 desafio-04.4/node_modules
 desafio-04.5/.vscode/
 desafio-04.5/node_modules
+desafio-04.6/.vscode/
+desafio-04.6/node_modules
 
