--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ desafio-04.5/.vscode/
 desafio-04.5/node_modules
 desafio-04.6/.vscode/
 desafio-04.6/node_modules
+desafio-04.7/.vscode/
+desafio-04.7/node_modules
 
