Desafio 5.1 - Link dos requisitos https://github.com/rocketseat-education/bootcamp-launchbase-desafios-05/blob/master/desafios/05-1-refatorando-aplicacao.md

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,7 @@ desafio-04.6/.vscode/
 desafio-04.6/node_modules
 desafio-04.7/.vscode/
 desafio-04.7/node_modules
+desafio-05.1/.vscode/
+desafio-05.1/node_modules
+
 
