Desafio 5.2 - Link dos requisitos https://github.com/rocketseat-education/bootcamp-launchbase-desafios-05/blob/master/desafios/05-2-interagindo-bd.md

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,7 @@ desafio-04.7/.vscode/
 desafio-04.7/node_modules
 desafio-05.1/.vscode/
 desafio-05.1/node_modules
+desafio-05.2/.vscode/
+desafio-05.2/node_modules
 
 
