Desafio 5.3 - Link dos requisitos https://github.com/rocketseat-education/bootcamp-launchbase-desafios-05/blob/master/desafios/05-3-relacionamentos-filtros-bd.md

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ desafio-05.1/.vscode/
 desafio-05.1/node_modules
 desafio-05.2/.vscode/
 desafio-05.2/node_modules
-
+desafio-05.3/.vscode/
+desafio-05.3/node_modules
 
