Desafio 5.4 - Link dos requisitos https://github.com/rocketseat-education/bootcamp-launchbase-desafios-05/blob/master/desafios/05-4-paginacao-bd.md

--- a/.gitignore
+++ b/.gitignore
@@ -8,17 +8,18 @@ desafio-04.1/.vscode/
 desafio-04.3/.vscode/
 desafio-04.3/node_modules
 desafio-04.4/.vscode/
-desafio-04.4/node_modules
-desafio-04.5/.vscode/
-desafio-04.5/node_modules
-desafio-04.6/.vscode/
-desafio-04.6/node_modules
-desafio-04.7/.vscode/
-desafio-04.7/node_modules
-desafio-05.1/.vscode/
-desafio-05.1/node_modules
-desafio-05.2/.vscode/
-desafio-05.2/node_modules
-desafio-05.3/.vscode/
-desafio-05.3/node_modules
-
+desafios-04.4/node_modules
+desafios-04.5/.vscode/
+desafios-04.5/node_modules
+desafios-04.6/.vscode/
+desafios-04.6/node_modules
+desafios-04.7/.vscode/
+desafios-04.7/node_modules
+desafios-05.1/.vscode/
+desafios-05.1/node_modules
+desafios-05.2/.vscode/
+desafios-05.2/node_modules
+desafios-05.3/.vscode/
+desafios-05.3/node_modules
+desafios-05.4/.vscode/
+desafios-05.4/node_modules
